# connector-human-programming-interface

./: .gitignore  conftest.py  cspell.config.yaml  demo.py  pyproject.toml  setup.py  tox.ini
.github/config/: connector-human-programming-interface.dict
misc/: check_legacy_init_py.py  repl.py
my/: kobo.py
my/core/: __init__.py  __main__.py  cachew.py  cfg.py  common.py  compat.py  error.py  logging.py  orgmode.py  pandas.py  query.py  query_range.py  serialize.py  source.py  sqlite.py  stats.py
my/core/utils/: concurrent.py  itertools.py
my/google/takeout/: html.py
my/location/fallback/: common.py
my/time/tz/: common.py
tests/extra/: polar.py
